--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,11 +10,16 @@
     --cor-cinza-sec: #C0C0C0;
     --cor-azul-bot: #167bf7;
     --cor-preta-back: #00030C;
+
+    --fonte--principal: 'Inter', sans-serif;
 }
 
 body{
     background-color: var(--cor-preta-back);
     color: var(--cor-branca-pri);
+    font-family: var(--fonte--principal);
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .principal{
@@ -23,4 +30,30 @@ body{
 
 .container{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.container__titulo{
+    font-size: 1.75rem;
+    font-weight: 700;
+}
+
+.container__botao{
+    background-color: var(--cor-azul-bot);
+    border-radius: 5px;
+    padding: 1rem;
+    display: block;
+    color: var(--cor-branca-pri);
+    text-decoration: none;
+}
+
+.botao__secudario{
+    background-color: transparent;
+    border: 2px solid var(--cor-branca-pri);
+}
+
+.container__aviso{
+    color: var(--cor-cinza-sec);
+    font-size: 0.75rem;
 }
