--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --cor-cinza-sec: #C0C0C0;
     --cor-azul-bot: #167bf7;
     --cor-preta-back: #00030C;
+    --cor-efeito:#60a2f3;
 
     --fonte--principal: 'Inter', sans-serif;
 }
@@ -96,4 +97,67 @@ margin: 2rem 0 2rem 0;
 
 .container__descricao{
     padding: 1.5rem;
+}
+
+.dispositivos_lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin:5rem 0;
+} 
+
+.dispositivos{
+    text-align: center;
+}
+
+.dispositivos__titulo{
+    font-size: 3rem;
+    font-weight: 700;
+    color: var(--cor-branca-pri);
+}
+
+.lista__item{
+    font-size: 2rem;
+    font-weight: 700;
+    color: var(--cor-branca-pri);
+}
+
+.rodape{
+    text-align: center;
+    margin: 7rem 3rem 2rem 3rem;
+}
+
+.rodape__lista{
+    font-size: 1rem;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    margin: 2rem 5rem;
+}
+
+.rodape__item{
+    text-decoration: none;
+    color: var(--cor-branca-pri);
+}
+
+.rodape__texto{
+    color: var(--cor-cinza-sec);
+    font-size: 0.9rem;
+    margin: 2rem 0;
+}
+
+.rodape__lista a:hover{
+    color: var(--cor-azul-bot);
+}
+
+.container__botao:hover{
+    background-color:var(--cor-efeito);
+    color: var(--cor-preta-back);
+    border-color: var(--cor-efeito);
+}
+
+.container__botao:active{
+    background-color:#167bf775;
+    color: var(--cor-preta-back);
+    border:none;
 }
