--- a/style.css
+++ b/style.css
@@ -161,3 +161,44 @@ margin: 2rem 0 2rem 0;
     color: var(--cor-preta-back);
     border:none;
 }
+
+@media screen and (max-width: 768px){
+    .container{
+        display: block;
+        background-image: none;
+    }
+
+    .container__imagem{
+        width: 50vw;
+    }
+
+    .container__caixa{
+        margin: 2em 2em;
+    }
+
+    .secundario{
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem{
+        width: 50vw;
+    }
+
+    .dispositivos_lista{
+        display: block;
+    }
+
+    .rodape__lista{
+        display: block;
+        margin: 1rem;
+    }
+
+    .rodape__texto{
+margin-bottom: 1.5rem;
+    }
+
+    .rodape{
+        height: 80vh;
+    }
+}
